# spam_sms_dectector_app

./: Taskfile.yaml  mypy.ini  pyproject.toml
data/: sms-data-corpus.csv
notebooks/: sms_compare.ipynb  url_compare.ipynb
spam-detector-web/: angular.json  package.json
spam-detector-web/src/: index.html
spam-detector-web/src/app/: app.component.html  dialog.component.ts
spam-sms-detector-app/: readme.md
spam-sms-detector-app/data/: sms-data-test.csv  sms-data.csv  sms-email-blacklist.csv  sms-phone-blacklist.csv  url-blacklist.csv
spam-sms-detector-app/notebooks/: sms_data.ipynb  url_data.ipynb
spam-sms-detector-app/report/: README.md  Taskfile.yaml
spam-sms-detector-app/report/src/: chapter1.typ  chapter2.typ  chapter3.typ  cover.typ  main.typ  pre.typ  state.typ  template.typ
spam-sms-detector-app/spam-detector-web/: README.md  package-lock.json
spam-sms-detector-app/src/: app.py  app_dto.py  tele.py
spam-sms-detector-app/src/models/: sms_bert_classifier.py  sms_ml_naive_bayes_classifier.py  sms_ml_random_forest_classifier.py  url_classifier.py  url_ml_classifier.py  url_ml_desicion_tree_classifier.py  url_ml_knn_classifier.py  (+4 more)
src/: app_models.py
src/models/: di.py  sms_classifier.py  sms_lstm_classifier.py  sms_ml_classifier.py  sms_ml_gradient_boosting_classifier.py  sms_ml_knn_classifier.py  sms_ml_logistic_regression_classifier.py  sms_ml_svm_classifier.py  sms_rnn_classifier.py  url_feature_extractor.py  url_ml_catboost_classifier.py  url_ml_mlp_classifier.py  url_ml_naive_bayes_classifier.py
src/utils/: url_utils.py  utils.py
(+3 files in other folders)
